--- a/bookingservice/src/main/resources/application.properties
+++ b/bookingservice/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.jpa.hibernate.ddl-auto=none
 
 
 inventory.service.url=http://localhost:8081/api/v1/inventory
+
+#Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=booking
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+
+##OpenAPI
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
